--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Heroku App Demo</title>
 </head>
 <body>
-    <h1>Heroku App Demo</h1>
+
+{{{body}}}
+
 </body>
 </html>
