add handlebars template engine, styles

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,6 @@
-<h1>Heroku App Demo</h1>
-{{defaultGreeting}}
+<div class="parent">
+    <div class="children">
+        <h1>Heroku App Demo</h1>
+        <h2>Custom Config: {{defaultGreeting}}</h2>
+    </div>
+</div>
