--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,29 @@
 <head>
     <meta charset="utf-8">
     <title>Heroku App Demo</title>
+    <style>
+        body {
+            margin: 0;
+        }
+        h1, h2 {
+            text-align: center;
+            padding: 20px;
+        }
+        .parent {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
+            margin: 0;
+        }
+        .children{
+            background: #ffdb4c;
+            height: 200px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    </style>
 </head>
 <body>
 
